--- a/static/css/recent.css
+++ b/static/css/recent.css
@@ -36,6 +36,10 @@
 }
 
 /* Adjustments for list view */
+.list-header.recent-header {
+    grid-template-columns: 30px minmax(200px, 2fr) 1fr 1fr 120px;
+}
+
 .file-item.recent-item {
     position: relative;
     grid-template-columns: 30px minmax(200px, 2fr) 1fr 1fr 120px;
